--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx run-many --target=serve --all --maxParallel=4",
+    "start": "node dist/apps/api/main",
     "build": "nx run-many --target=build --all --maxParallel=4",
     "test": "nx test"
   },
