--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/apps/music-service/main"
+    "start": "open-cli dist/apps/music-app/index.html"
   },
   "private": true,
   "dependencies": {
