--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/apps/music-service/main",
-    "build": "nx run-many --target=build --all --maxParallel=4"
+    "start": "node dist/apps/music-service/main"
   },
   "private": true,
   "dependencies": {
